	* New operator: intlevel - Linear level interpolation
	* New operator: invertlev - Invert levels [request: Marco Giorgetta]
	* New operator: sellevidx - Select levels by index [request: David Wang]
	* New module: Pressure (fpressure, hpressure) [request: Jan Kazir]
	* New module: Tests (normal, studentt, chisquare, beta, fisher)
	* New module: Echam5ini (read_e5ml, write_e5ml)
	* Settime: change TIME_CONSTANT to TIME_VARIABLE if ntstep = 0
	* ntime: bug fix for datasets with time constant parameters only [report: David Wang]
	  (also affected: ndate, nmon, nyear, showdate, showtime, showmon, showyear)
	* Version 1.2.0 released
	
2008-04-08  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* using CDI library version 1.1.1
	* configure: --with-szlib=<directory>
	* configure: check stat.st_blksize
	* New operator: regres (Regression) [request: Wolfgang Mueller]
	* New module: Gridcell (gridarea, gridweights)
	* New operator: del29feb to delete the 29. February [request: Etienne Tourigny]
	* New operator: zaxisdes
	* Exprf: using MT safe version of bison and flex (bug fix) [report: Claas Teichmann]
	* Arith: using missval from vlistID1 if ( filltype == FILL_TS && vlistIDx1 != vlistID1 )
	* Arithc: recalculate number of missing values (bug fix) [report: Holger Goettel]
	* Vertint: support for data on hybrid half-level
	* Vertint: support for GME data [request: Luis Kornblueh]
	* Vertint: bug fix for input with time constant fields
	* Outputgmt: use grid_mask if present
	* Input: skip ',' from standard input stream
	* splitsel: bug fix for multilevel/multivar datasets [report: Heiner Widmann]
	* remaplib: set luse_grid_corners = TRUE for GRID_CELL (bug fix)
	* remap_conserv: skip very small regions if num_subseg exceeded limit
	* remapcon: bug fix for NORMALIZE_OPT 'dest' and 'none'
	* Seltime: changed value of NOPERATORS (bug fix)
	* Version 1.1.1 released
	
2008-01-24  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* using CDI library version 1.1.0