@@ -731,10 +731,10 @@ static char *ChangeHelp[] = {
     "",
     "SYNOPSIS",
     "    chcode,oldcode,newcode[,...]  ifile ofile",
-    "    chname,ovar,nvar,...  ifile ofile",
+    "    chname,oldname,newname,...  ifile ofile",
     "    chlevel,oldlev,newlev,...  ifile ofile",
     "    chlevelc,code,oldlev,newlev  ifile ofile",
-    "    chlevelv,var,oldlev,newlev  ifile ofile",
+    "    chlevelv,name,oldlev,newlev  ifile ofile",
     "",
     "DESCRIPTION",
     "    This module reads fields from ifile, changes some header values",
@@ -756,8 +756,8 @@ static char *ChangeHelp[] = {
     "PARAMETER",
     "    code                 INTEGER  Code number",
     "    oldcode,newcode,...  INTEGER  Pairs of old and new code numbers",
-    "    var                  STRING   Variable name",
-    "    ovar,nvar,...        STRING   Pairs of old and new variable names",
+    "    name                 STRING   Variable name",
+    "    oldname,newname,...  STRING   Pairs of old and new variable names",
     "    oldlev               FLOAT    Old level",
     "    newlev               FLOAT    New level",
     "    oldlev,newlev,...    FLOAT    Pairs of old and new levels",
